[gd_scene load_steps=4 format=3 uid="uid://dml243glmg6vj"]

[ext_resource type="PackedScene" uid="uid://b52vx1p5uhvqw" path="res://UI/CustomControls/grid_card.tscn" id="1_nrymo"]
[ext_resource type="Script" uid="uid://ccqxu0ixl2408" path="res://UI/UserControls/operation_scene.gd" id="1_o5rby"]
[ext_resource type="PackedScene" uid="uid://j2mv8poqh1ow" path="res://UI/CustomControls/core_card.tscn" id="2_o5rby"]

[node name="NavigationScene" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5rby")

[node name="GridCard" parent="." instance=ExtResource("1_nrymo")]
layout_mode = 2

[node name="GridContainer" parent="GridCard/MarginContainer/PanelContainer/MarginContainer/PanelContainer" index="0"]
columns = 3

[node name="Card" parent="GridCard/MarginContainer/PanelContainer/MarginContainer/PanelContainer/GridContainer" index="0" instance=ExtResource("2_o5rby")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonStart" type="Button" parent="GridCard/MarginContainer/PanelContainer/MarginContainer/PanelContainer/GridContainer/Card/MarginContainer/PanelContainer/MarginContainer/PanelContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "start"

[node name="Card2" parent="GridCard/MarginContainer/PanelContainer/MarginContainer/PanelContainer/GridContainer" index="1" instance=ExtResource("2_o5rby")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonPause" type="Button" parent="GridCard/MarginContainer/PanelContainer/MarginContainer/PanelContainer/GridContainer/Card2/MarginContainer/PanelContainer/MarginContainer/PanelContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "pause"

[node name="Card3" parent="GridCard/MarginContainer/PanelContainer/MarginContainer/PanelContainer/GridContainer" index="2" instance=ExtResource("2_o5rby")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonReset" type="Button" parent="GridCard/MarginContainer/PanelContainer/MarginContainer/PanelContainer/GridContainer/Card3/MarginContainer/PanelContainer/MarginContainer/PanelContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "reset"

[editable path="GridCard"]
[editable path="GridCard/MarginContainer/PanelContainer/MarginContainer/PanelContainer/GridContainer/Card"]
[editable path="GridCard/MarginContainer/PanelContainer/MarginContainer/PanelContainer/GridContainer/Card2"]
[editable path="GridCard/MarginContainer/PanelContainer/MarginContainer/PanelContainer/GridContainer/Card3"]
